[package]
name = "recursive_finder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = { git = "https://github.com/rust-lang-nursery/glob.git"}
error-chain = { git = "https://github.com/rust-lang-deprecated/error-chain.git"}